[gd_scene load_steps=55 format=2]

[ext_resource path="res://scripts/inimigos/olho_neon.gd" type="Script" id=1]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/7.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/iris1.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca7.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/iris2.png" type="Texture" id=5]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/6.png" type="Texture" id=6]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/17.png" type="Texture" id=7]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/8.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/circulo_vermelho-export.png" type="Texture" id=9]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca1.png" type="Texture" id=10]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/21.png" type="Texture" id=11]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/11.png" type="Texture" id=12]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/4.png" type="Texture" id=13]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/10.png" type="Texture" id=14]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/14.png" type="Texture" id=15]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/24.png" type="Texture" id=16]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/13.png" type="Texture" id=17]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/19.png" type="Texture" id=18]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/12.png" type="Texture" id=19]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/9.png" type="Texture" id=20]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/2.png" type="Texture" id=21]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca5.png" type="Texture" id=22]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/23.png" type="Texture" id=23]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/16.png" type="Texture" id=24]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/15.png" type="Texture" id=25]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/20.png" type="Texture" id=26]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/18.png" type="Texture" id=27]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/1.png" type="Texture" id=28]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca4.png" type="Texture" id=29]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca6.png" type="Texture" id=30]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca3.png" type="Texture" id=31]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca10.png" type="Texture" id=32]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/3.png" type="Texture" id=33]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca8.png" type="Texture" id=34]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca9.png" type="Texture" id=35]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca12.png" type="Texture" id=36]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca11.png" type="Texture" id=37]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/5.png" type="Texture" id=38]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/22.png" type="Texture" id=39]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/olhos_fumaca2.png" type="Texture" id=40]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/shader/magic_single_tex.shader" type="Shader" id=41]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/Heal.tres" type="Material" id=42]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/textures/circular_mask.png" type="Texture" id=43]
[ext_resource path="res://sprites/inimigos/80s/olho_neon/materials/textures/magic_masks/particle_cross.png" type="Texture" id=44]

[sub_resource type="CircleShape2D" id=1]
radius = 25.5184

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.231818 ), 0.0, 2.46443, 0, 0, Vector2( 0.97931, 0.859091 ), 0.263636, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.00671141, 0.311475, 1 )
colors = PoolColorArray( 0.00445557, 0.120683, 0.285156, 1, 0.0904541, 0.317482, 0.609375, 1, 0.426579, 0.173035, 0.984375, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 41 )
shader_param/emission_intensity = 1.5
shader_param/texture_mask = ExtResource( 44 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.115909 ), 0.0, 0.677922, 0, 0, Vector2( 0.42069, 0.106818 ), -0.73514, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.204918, 0.770492, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.454485, 0.145203, 0.953125, 1, 0.440598, 0.197601, 0.683594, 1, 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 193.485, 105.533 )

[sub_resource type="Animation" id=9]
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 40 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 4 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 37 ), ExtResource( 36 ) ]
}

[sub_resource type="Animation" id=10]
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/Node2D/pre_tiro:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 21 ), ExtResource( 33 ), ExtResource( 13 ), ExtResource( 38 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 7 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 11 ), ExtResource( 39 ), ExtResource( 23 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/Node2D/pre_tiro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, -0.3 ), Vector2( -0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( -0.4, -0.4 ), Vector2( 0.3, 0.1 ), Vector2( 0.1, 0.5 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.18, 0.18 ), Vector2( 0.21, 0.21 ), Vector2( 0.16, 0.16 ), Vector2( 0.19, 0.19 ), Vector2( 0.13, 0.13 ), Vector2( 0.2, 0.2 ) ]
}

[node name="olho_neon" type="KinematicBody2D"]
position = Vector2( -0.0415308, -0.180066 )
collision_layer = 2
collision_mask = 98
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="." groups=["olho_neon"]]
shape = SubResource( 1 )

[node name="particulas" type="Node2D" parent="."]
position = Vector2( -9.44335, 14.8508 )

[node name="Heal2D" type="CPUParticles2D" parent="particulas"]
material = ExtResource( 42 )
position = Vector2( 8.90275, -7.47311 )
amount = 50
lifetime = 0.5
speed_scale = 0.5
randomness = 0.1
local_coords = false
draw_order = 1
texture = ExtResource( 43 )
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2( 0, 1 )
spread = 100.0
gravity = Vector2( 0, -50 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
linear_accel = 40.0
angle = 75.0
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Cross2D" type="CPUParticles2D" parent="particulas/Heal2D"]
material = SubResource( 4 )
amount = 12
lifetime = 0.3
speed_scale = 0.3
randomness = 1.0
local_coords = false
draw_order = 1
texture = ExtResource( 44 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, 0 )
spread = 50.0
gravity = Vector2( 0, -300 )
initial_velocity = 60.0
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.1
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Node2D" type="Node2D" parent="sprite"]

[node name="circulo_vermelho" type="Sprite" parent="sprite/Node2D"]
position = Vector2( 15, 0 )
texture = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="sprite/Node2D"]
position = Vector2( 20, 0 )
frames = SubResource( 7 )
playing = true

[node name="pre_tiro" type="Sprite" parent="sprite/Node2D"]
visible = false
position = Vector2( 16.5486, 1.73233 )
rotation = 1.0472
scale = Vector2( 2.5, 2.5 )
z_index = 6
texture = ExtResource( 28 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 8 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/mov_olho = SubResource( 9 )
anims/pre_tiro = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="atirar"]
